fix: some whitespace

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ button {
 }
 
 /* Completed */
-.name-todo {
+.todo-line {
   text-decoration: line-through;
   color: #888;
 }
